Fix visibility issues with title

--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -364,3 +364,7 @@ a {
   background: rgba(0, 0, 0, 0);
 }
 
+h1.display {
+  text-shadow: 0 0 9px #323232;
+}
+
